<resources>
    <string name="app_name">TechTalk</string>
    <string name="title_resources">Resources</string>
    <string name="title_resources_detail">Resources</string>
    <string name="title_collections_page">Collections</string>
    <string name="title_add_collection">Add Collection</string>
    <string name="title_collection_contents">Collection Contents</string>
    <string name="title_learning_paths">Learning Paths</string>
    <string name="title_learning_paths_detail">Learning Paths Detail</string>
    <string name="title_learning_paths_add">Add Learning Path</string>
    <string name="title_user_profile">User Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_collection_resource_detail">Collection Resource Detail</string>
    <string name="btn_subscribe">Subscribe</string>
    <string name="resource_add">Add another resource</string>
    <string name="btn_create">Create</string>
    <string name="app_settings">app_settings</string>
    <string name="lp_detail_view_more"><b><i>Subscribe to View the Recommended Path...</i></b></string>
    <string name="settings_general">General</string>
    <string name="settings_alert">Alert</string>
    <string name="settings_notification">Enable Notification</string>
    <string name="settings_notification_on">Notification On</string>
    <string name="settings_notification_off">Notification Off</string>
    <string name="settings_enabled">Enabled</string>
    <string name="settings_disabled">Disabled</string>
    <string name="settings_battery_saver_on">Battery Saver On</string>
    <string name="settings_battery_saver_off">Battery Saver Off</string>
    <string name="settings_play">Auto-play Videos</string>
    <string name="settings_display">Display</string>
    <string name="settings_brightness">Brightness Level</string>
    <string name="settings_brightness_percent">30%</string>
    <string name="settings_wallpaper">Wallpaper</string>
    <string name="settings_wallpaper_change">Change Wallpaper</string>
    <string name="settings_theme">Dark Theme</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_auto">Auto</string>
    <string name="settings_theme_device">Device Theme</string>
    <string name="settings_about">About</string>
    <string name="settings_version">Version</string>
    <string name="settings_sem_ver">v1.0.0</string>
    <string name="settings_author">Author</string>
    <string name="settings_group">NUMAD22Su Group 19</string>
    <string name="text_box_username">Username</string>
    <string name="text_box_title">Title</string>
    <string name="collection_description">A collection of resources</string>
    <string name="collection_add_button">Adds a collection</string>
    <string name="collection_title">Collection Title</string>
    <string name="resource_title">Resource Title</string>
    <string name="author">Author</string>
    <string name="resource_description">Description</string>

    <string-array name="settings_themes">
        <item>@string/settings_theme_dark</item>
        <item>@string/settings_theme_light</item>
        <item>@string/settings_theme_auto</item>
    </string-array>

    <string-array name="autoplay_options">
        <item>@string/settings_enabled</item>
        <item>@string/settings_disabled</item>
    </string-array>

    <string-array name="settings_num_options">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="lp_resource_content_type">
        <item>Book</item>
        <item>eBook</item>
        <item>Instructor Led Course</item>
        <item>On-Demand Course</item>
        <item>Moog Course</item>
        <item>University Course</item>
        <item>Online Video</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>