<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_trending_up_24"
        android:title="@string/title_resources" />

    <item
        android:id="@+id/navigation_collections"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_collections_page" />

    <item
        android:id="@+id/navigation_learning_paths"
        android:icon="@drawable/ic_baseline_learningpath_24"
        android:title="@string/title_learning_paths" />

    <item
        android:id="@+id/navigation_user_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_user_profile" />

</menu>