<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/collection_card_height"
    android:layout_gravity="center"
    android:layout_margin="@dimen/card_margin"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/collection_image_height"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_folder_48"
            android:contentDescription="@string/collection_description" />

        <TextView
            android:id="@+id/collectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collection_title"
            android:textColor="@color/black"
            android:textSize="@dimen/collection_title_text_size"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/collectionUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.cardview.widget.CardView>